[project]
name = "hsa-tracker"
version = "0.1.0"
description = "Drop a PDF receipt → extract data → file in Google Drive → log in Google Sheets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
